--- a/contact.toml
+++ b/contact.toml
@@ -1,10 +1,10 @@
 [[contact]]
 name = "Address"
-address = "4923 Market Street, Orlando FL"
+address = "1430 2nd Ave. Seattle, WA 98109"
 icon = "fa-map-marked-alt"
 [[contact]]
 name = "Email"
-address = """<a href="#!">hello@yourdomain.com</a>"""
+address = """<a href="#!">hello@cloudcast.consulting</a>"""
 icon = "fa-envelope"
 [[contact]]
 name = "Phone"
@@ -14,7 +14,7 @@ icon = "fa-mobile-alt"
 icon = "fa-mastodon"
 url = "#!"
 [[social]]
-icon = "fa-facebook-f"
+icon = "fa-aws"
 url = "#!"
 [[social]]
 icon = "fa-github"
